--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -255,6 +255,19 @@
                                        'readonly': [('partner_id', '!=', False),
                                                    ('mobile','!=', False)]}"
                             />
+                            <!--<field
+                                name="phone"
+                                colspan="2"
+                                nolabel="1"
+                                placeholder="phone"
+                                widget="phone"
+                                force_save="1"
+                                attrs="{'invisible': [('reservation_type','in',('out'))],
+                                 'required': [('channel_type','in',('door','mail','phone')),
+                                              ('mobile','=','')],
+                                 'readonly': [('partner_id', '!=', False),
+                                             ('phone','!=', False)]}"
+                            />-->
                             <field
                                 placeholder="Partner Notes"
                                 colspan="2"
@@ -288,6 +301,8 @@
                                 name="agency_id"
                                 options="{'no_create': True,'no_open': True}"
                             />-->
+                            <field name="agency_id"/>
+                            <field name="channel_type_id"/>
                             <field
                                 name="cancelled_reason"
                                 attrs="{'invisible': [('state', 'not in', ('cancelled'))]}"
@@ -328,8 +343,6 @@
                                 nolabel="1"
                                 placeholder="Reservation Notes"
                             />
-                            <field name="agency_id" />
-                            <field name="channel_type_id" />
                         </group>
                         <group
                             colspan="2"
@@ -369,17 +382,6 @@
                                 string="Only Room"
                                 widget="monetary"
                             />
-                            <field
-                                name="commission_percent"
-                                string="Commission percent (%)"
-                            >
-                                <field
-                                    name="commission_amount"
-                                    string="Commission Amount"
-                                >
-
-                                </field>
-                            </field>
                             <field name="invoice_status" invisible="1" />
                             <field name="currency_id" invisible="1" />
                             <field
