--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -4,7 +4,8 @@
         id="action_checkin_partner"
         name="Action checkin"
         res_model="pms.checkin.partner"
-        view_mode="tree,form"
+        view_mode="kanban,tree,form"
+        domain="[('state', '!=', 'draft')]"
     />
     <menuitem
         id="menu_pms_checkin_partner"
@@ -107,6 +108,165 @@
                 <field name="folio_id" force_save="1" invisible="1" />
                 <field name="state" />
             </tree>
+        </field>
+    </record>
+    <record model="ir.ui.view" id="pms_checkin_partner_kanban_view">
+        <field name="name">pms.checkin.partner.kanban</field>
+        <field name="model">pms.checkin.partner</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="state" class="o_res_partner_kanban" sample="1">
+                <field name="id" />
+                <field name="identifier" />
+                <field name="partner_id" />
+                <field name="reservation_id" />
+                <field name="folio_id" />
+                <field name="pms_property_id" />
+                <field name="name" />
+                <field name="email" />
+                <field name="mobile" />
+                <field name="arrival" />
+                <field name="departure" />
+                <field name="state" />
+                <field name="image_128" />
+                <templates>
+                    <t t-name="kanban-box">
+                        <div
+                            class="oe_kanban_global_click o_kanban_record_has_image_fill o_res_partner_kanban"
+                        >
+                            <div class="o_kanban_image">
+                                <img
+                                    alt="Contact image"
+                                    t-if="record.image_128.raw_value"
+                                    t-att-src="kanban_image('pms.checkin.partner', 'image_128', record.id.raw_value)"
+                                />
+                                <t t-if="!record.image_128.raw_value">
+                                    <!--TODO: Use npm avatar generation? https://github.com/Ashwinvalento/cartoon-avatar-->
+                                    <img
+                                        alt="Draft"
+                                        t-if="record.state.raw_value === 'draft'"
+                                        t-att-src="&quot;pms/static/description/avatar.png&quot;"
+                                    />
+                                    <img
+                                        alt="Cancelled"
+                                        t-if="record.state.raw_value === 'cancelled'"
+                                        t-att-src="&quot;pms/static/description/avatar.png&quot;"
+                                    />
+                                </t>
+                            </div>
+                            <div class="oe_kanban_details">
+                                <div class="o_kanban_record_top">
+                                    <div class="o_kanban_record_headings">
+                                        <strong class="o_kanban_record_title">
+                                            <div
+                                                class="float-right"
+                                                t-if="record.state.raw_value == 'onboard'"
+                                                name="state"
+                                            >
+                                                <span
+                                                    class="fa fa-circle text-success"
+                                                    role="img"
+                                                    aria-label="Present"
+                                                    title="Present"
+                                                    name="state"
+                                                >
+
+                                                </span>
+                                            </div>
+                                            <div
+                                                class="float-right"
+                                                t-if="record.state.raw_value == 'done'"
+                                                name="state"
+                                            >
+                                                <span
+                                                    class="fa fa-circle text-muted"
+                                                    role="img"
+                                                    aria-label="Done"
+                                                    title="Done"
+                                                    name="state"
+                                                >
+
+                                                </span>
+                                            </div>
+                                            <div
+                                                class="float-right"
+                                                t-if="record.state.raw_value == 'precheckin'"
+                                                name="state"
+                                            >
+                                                <span
+                                                    class="fa fa-circle text-warning"
+                                                    role="img"
+                                                    aria-label="Precheckin"
+                                                    title="Precheckin"
+                                                    name="state"
+                                                >
+
+                                                </span>
+                                            </div>
+                                            <field
+                                                name="name"
+                                                placeholder="Hosted's Name"
+                                            />
+                                            <field
+                                                name="reservation_id"
+                                                placeholder="Room Reservation"
+                                            />
+                                        </strong>
+                                        <span
+                                            t-if="record.arrival.raw_value"
+                                            class="o_kanban_record_subtitle"
+                                        >
+                                            <field name="arrival" />
+                                        </span>
+                                        <span
+                                            t-if="record.departure.raw_value"
+                                            class="o_kanban_record_subtitle"
+                                        >
+                                            <field name="departure" />
+                                        </span>
+                                    </div>
+                                </div>
+                                <field
+                                    name="segmentation_ids"
+                                    widget="many2many_tags"
+                                    options="{'color_field': 'color'}"
+                                />
+                                <ul>
+                                    <li
+                                        t-if="record.email.raw_value"
+                                        class="o_kanban_record_subtitle"
+                                    >
+                                        <field name="email" />
+                                    </li>
+                                    <li
+                                        t-if="record.mobile.raw_value"
+                                        class="o_kanban_record_subtitle"
+                                    >
+                                        <field name="mobile" />
+                                    </li>
+                                </ul>
+                                <div class="oe_kanban_bottom_right">
+                                    <a
+                                        name="action_on_board"
+                                        tabindex="-1"
+                                        type="object"
+                                        attrs="{'invisible': [('state', '!=', 'precheckin')]}"
+                                        class="o_project_kanban_box"
+                                    >
+                                        <div>
+                                            <span class="o_label">
+                                                <i
+                                                    class="fa fa-lg fa-play-circle text-success"
+                                                />
+                                                Check-in
+                                            </span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
         </field>
     </record>
     <record model="ir.ui.view" id="pms_checkin_partner_view_search">
