--- a/pms/views/res_partner_views.xml
+++ b/pms/views/res_partner_views.xml
@@ -39,19 +39,15 @@
                     <field string="Folios" name="folios_count" widget="statinfo" />
                 </button>
             </xpath>
-            <!--<xpath expr="//field[@name='user_id']" position="after">
-                <field name="company_type" invisible="1" />
+            <xpath expr="//field[@name='vat']" position="after">
+                <field name="is_agency" />
                 <field
-                    name="is_agency"
-                    attrs="{'invisible': [('company_type','!=','company')]}"
+                    name="sale_channel_id"
+                    attrs="{'invisible':[('is_agency','!=',True)]}"
+                    options="{'no_create': True,'no_open': True}"
                 />
-            </xpath>-->
+            </xpath>
         </field>
-        <field name="is_agency" />
-        <field
-            name="sale_channel_id"
-            attrs="{'invisible':[('is_agency','=','True')]}"
-        />
     </record>
     <menuitem
         name="Customers"
