--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -230,6 +230,12 @@
                                         </div>
                                     </a>
                                 </div>
+                                <div class="oe_kanban_bottom_right">
+                                    <field
+                                        name="partner_id"
+                                        widget="many2one_avatar_user"
+                                    />
+                                </div>
                             </div>
                         </div>
                     </t>
@@ -327,6 +333,14 @@
                     />
                     <separator />
                 </group>
+                <searchpanel>
+                    <field
+                        name="state"
+                        string="State"
+                        enable_counters="1"
+                        select="multi"
+                    />
+                </searchpanel>
             </search>
         </field>
     </record>
