[IMP] Checking only one selected sales channel

--- a/pms/views/res_partner_views.xml
+++ b/pms/views/res_partner_views.xml
@@ -40,7 +40,9 @@
                 </button>
             </xpath>
             <xpath expr="//field[@name='name']" position="after">
-                <field name="is_agency" />
+                <group>
+                    <field name="is_agency" />
+                </group>
             </xpath>
             <xpath expr="//page[@name='internal_notes']" position="after">
                 <page
